[package]
name = "py2rust"
version = "0.1.0"
authors = ["rollrat <rollrat@inha.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "parser"]

[dependencies]
rustpython-parser = {path = "parser", version = "0.1.1"}
clap = "2.33"
colored = "*"